styles.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');

*, *::before, *::after {
  box-sizing: border-box;
  font-family: 'DM Sans', sans-serif;
}

html {
  scroll-behavior: smooth;
}

body{
  background-color: rgb(14, 13, 13);
  width: 100vw;
  height: 100vh;
  margin: 0;
}

/* Navbar */


.navbar {
  font-size: 15px;
  color: #FAFAFA;
  text-align: center;
  margin: 0;
  position: fixed;
}

.navbar ul {
  list-style-type: none;
  display: flex;
  width: 90vw;
  justify-content: space-evenly;
}

.navbar ul li {
  cursor: pointer;
  position: relative;
  text-align: center;
}

.navbar ul li a {
  text-decoration: none;
  color: #FAFAFA;
}

.navbar li.active::after {
  position: absolute;
  content: "";
  height: 3px;
  width: 100%;
  background-color: #FF105e;
  left: 0;
  bottom: -7px;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  animation: appear 0.3s linear;
}

@keyframes appear {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}


/* End of Navbar */


/* Home Page */


section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  width: 100%;
  height: 100vh;
  color: #FAFAFA;
  text-align: left;
}

.home-page-box {
  margin-left: 10%;
}

.greeting {
  font-size: 20px;
}

.name {
  font-size: 40px;
  font-weight: bold;
}

.paragraph {
  width: 40%;
  font-size: 15px;
}

.TOP {
  color: #cc9543;
  text-decoration: underline solid cyan;
  text-decoration-thickness: 2px;
}
.list {
  padding-bottom: 20px;
}




/* Home Page End */


/* Project Page */

section .projects {
  display: grid;
  place-items: center;
}

.cards {
  display: grid;
  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
  padding: 40px;
  grid-gap: 30px;
}

.card {
  background-color: #1c1b29;
  border-radius: 20px;
  box-shadow: 0 0 30px rgba(0,0,0,0.18);
}

.container {
  position: relative;
  clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);

}

img:not(.portrait) {
  width: 100%;
  display: block;
  border-radius: 20px 20px 0 0;
}

.container:after {
  content: "";
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 20px 20px 0 0;
  opacity: 0.7;
}

.details {
  padding: 5px;
}

.details > h3 {
  color: #FF105e;
  font-weight: 600;
  font-size: 18px;
  margin: 10px 0 10px 0;
}

.details > p {
  color: #FAFAFA;
  font-size: 13px;
  line-height: 30px;
  font-weight: 400;
}

/* Project Page End */



/* About Me Page */


.wrapper {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: 'DM Sans', sans-serif;
  text-align: center;
  color: #FAFAFA;
  line-height: 1.5;
  letter-spacing: 1px;
}

.testimonial {
  padding: 30px 100px;
}

article h1{
  font-size: 50px;
  font-weight: 800;
  text-transform: uppercase;
  letter-spacing: 1.5px;
}

article h1:after {
  content: "";
  height: 5px;
  width: 225px;
  background-color: #fff;
  display: block;
  margin: auto;
  scroll-behavior: smooth;
}

article img {
  height: 200px;
  width: 200px;
  border: 2px solid #FF105e;
  border-radius: 50%;
  margin-top: 0px;
}

.bio {
  display: flex;
}

.bio-content {
  font-family: sans-serif;
  font-size: 15px;
  margin-top: 30px;
  padding: 0 100px 0 100px;
  text-align: left;

}

article h5 {
  text-transform: uppercase;
  font-size: 28px;
  margin-top: 30px;
  letter-spacing: 1.5px;
}

article p {
  font-size: 17px;
}


/* About Me Page End */

.contact-title {
  font-size: 40px;
  font-weight: bold;
  color: #FAFAFA;
  text-decoration: none;
  border: 2px solid #FF105e;
  padding: 5px 5px 5px 5px;
}

.contact-content {
  padding-top: 40px;
}


/* Contact Me Page */

